--- a/1小李是中国人.md
+++ b/1小李是中国人.md
@@ -1,6 +1,6 @@
-# 语法
 
-## Ａは  Ｂです
+
+# Ａは  Ｂです
 注意这里的は是读 **wa**，是一种助词。です即“是”的意思。
 は用于提示主题。
 
@@ -8,13 +8,13 @@
 李さんわ，中国人です
 わだしは，学生です
 
-## ＡはＢ　ではありません
+# ＡはＢ　ではありません
 在口语中では也可以用じゃ代替
 相当于 A不是B
 
 森さんは学生　ではありません
 
-## ＡはＢですか
+# ＡはＢですか
 相当于  A是B吗？
 日语用か结尾表示疑问，没有疑问号
 
@@ -22,11 +22,11 @@
 回答：
 はい，xxです
 いいえ，ｘｘｘではありません
-## ＡのＢ
+# ＡのＢ
 助词の连接名词和名词。一般情况下是汉语的“的”的意思
 李さんは大学の先生です
 
-## 人称
+# 人称
 わたし 我
 あなた 你
 あの人 那个人
@@ -40,71 +40,14 @@
 不是，(我)不是吉田。是森。
 
 
-## 寒暄
+# 寒暄
 介绍完自己后，说“请多关照”。
 はじめましで　李です　どうぞ　よろしくお願(れが nega)います。
 
+
+# 一些表达
 对“初次见面”的回复或者说避免重复：我才是。
 こちらこそ、どうぞ　よろしく　お願いします
-
-# 单词
-
-| 单词    | 假名              | 声调  | 词义         |
-| ----- | --------------- | --- | ---------- |
-| 中国人   | ちゅうごくじん         | ４   | 中国人        |
-| 日本人   | にほんじｎ           | ４   | 日本人        |
-| 韓国人   | かんこくじん          | ４   | 韩国人        |
-| アメリカ人 | あめリかじん          | ４   | 美国人        |
-| フランス人 | ふらんすじん          | ４   | 法国人        |
-| 学生    | がくせい            | ０   | 学生         |
-| 留学生   | りゅうがくせい         | 3   | 留学生        |
-|       | きようじょ           | 0   | 教授         |
-|       |                 | 1   | 职员         |
-|       |                 | 3   | 公司职员       |
-|       |                 | 0   | 店员         |
-|       |                 | 3   | 进修生        |
-|       |                 | 1   | 企业         |
-|       |                 | 0   | 大学         |
-|       |                 | 1、2 | 父亲         |
-|       |                 | 0   | 科长         |
-|       |                 | 0   | 总经理        |
-|       |                 | 0   | 迎接         |
-|       |                 | 2   | 那个人        |
-|       |                 | 0   | 我          |
-|       |                 | 2   | 你          |
-|       |                 | 1   | 非常，很       |
-|       |                 | 1   | 是(应答);是的   |
-|       |                 | 3   | 不，不是       |
-|       |                 |     | 哎，哎呀       |
-|       |                 |     | 李          |
-| 王     | おう              | 1   | 王          |
-|       |                 | 1   | 张          |
-|       |                 | 0   | 森          |
-|       |                 | 0   | 林          |
-|       |                 | 0   | 小野         |
-|       |                 | 0   | 吉田         |
-|       |                 | 0   | 田中         |
-|       |                 | 0   | 中村         |
-|       |                 | 1   | 太郎         |
-| 金     | キム(韩国人)　きん(中国人) | 1   | 金          |
-|       |                 | 1   | 迪蓬         |
-|       |                 | 1   | 史密斯        |
-|       |                 | 1   | 约翰逊        |
-|       |                 | 1   | 中国         |
-|       |                 | 5   | 东京大学       |
-|       |                 | 4   | 北京大学       |
-|       |                 | 5   | JC策划公司     |
-|       |                 | 5   | 北京旅行社      |
-|       |                 | 5   | 日中商社       |
-|       |                 | 5   | 你好         |
-|       |                 | 4   | 对不起        |
-|       |                 | 1   | 请          |
-|       |                 |     | 先生、小姐      |
-|       |                 | 4   | 初次见面       |
-|       |                 | 4   | 我才要(请您...) |
-|       |                 | 1   | 是(这样)      |
-|       |                 | 4   | 不是         |
-|       |                 | 5   | 不知道        |
 “日本人”的声调不一样些。不是く高音。
 相对日本的外国姓基本都是1型。
 日本常见的姓都是0型，但不排除少数。
