--- a/2这是书.md
+++ b/2这是书.md
@@ -1,6 +1,4 @@
-# 语法
-
-## 指代
+# 指代
 これ：これはＡです　this
 それ：それはＡです    that
 あれ：あれはＡです    it
@@ -30,12 +28,12 @@
 - 森さんの　かばんは　どれですか
 - 森さんの　かばんは　どのかばんですか
 
-## 谁的xx：
+# 谁的xx：
 例子：这是我的笔记本
 これは　私（わたし）のノートです
 
 
-## 一些表达
+# 一些表达
 - 方：表尊重，この方　这位是谁。比この人更有礼貌
 - 年龄：
 	- 何歳（なんさい），礼貌写法（何歳ですか）
@@ -44,27 +42,3 @@
 - 叹词：えっ
 - 外来词：古时从中国引入的不算外来词。指音译过来的次。都是片假名。
 - 非常感谢：どうも ありがとう ございます
-# 单词
-| 单词  | 假名  | 声调  | 词义  |
-| --- | --- | --- | --- |
-| 本    |     |     |     |
-|  かばん   |     |     |     |
-|   ノート  |     |     |     |
-|   鉛筆  |     |     |     |
-|  傘   |     |     |     |
-|  靴   |     |     |     |
-| 新聞   |     |     |     |
-|  ざっし  |     |     |     |
-|   じしょ  |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
-
