--- a/3这里是商场.md
+++ b/3这里是商场.md
@@ -1,5 +1,4 @@
-# 语法
-## 场所
+# 场所
 这/那 是 场所
 ここ／そこ／あそこ　は　Ａです
 疑问就是どこ
@@ -8,13 +7,13 @@
 
 ここは　デパート　です　这里是百货商店。
 
-## 物在场所
+# 物在场所
 ＡA物　は　 B场所 です
 
 トイレ　は　ここ　です 厕所在这。
 小野さん　は　事務所　です　小野女士在事务所（不要翻译成小野是事务所）　
 
-## 问 物在哪
+# 问 物在哪
 Ａ　は　どこですか　A在哪
 あちらで（和あそこ一样，但前者更礼貌）す　在那
 
@@ -28,27 +27,23 @@
 打扰一下，请问ABC大学在哪里
 すみません　ABC大学は　どこですか
 
-## 也
+# 也
 就是把 は　改为　も
 李さんは　中国人です，王さんも　中国人です
 
 あなたも　中国人ですか
 
-## 询问时提供多个选项
+# 询问时提供多个选项
 重复使用ですか
 林さんは　韓国人ですか　日本人ですか　中国人ですか
 
-## 　物多少钱
+# 物多少钱
 Ａは　いくらですか
 
 これ物品は　いくらですか
 
-## 一些表达
+# 一些表达
 - 省略：比如这个多少钱？那个呢？那个呢？直接これは　いくらですか　それは　あれは
 - 礼貌：どちらですか　あちらです。请问您是哪一位？どちらさまですか
 - 打扰一下、我想说。。。　あのう。。。
 - ですか读音：升调就是疑问，降调就是恍然大悟的感觉
-
-
-
-# 单词
