--- a/学习打卡.md
+++ b/学习打卡.md
@@ -1,3 +1,4 @@
+# 语法
 
 | day       | class |
 | --------- | ----- |
@@ -9,3 +10,10 @@
 | 2025/2/11 | 10~14 |
 | 2025/2/12 | 15~16 |
 | 2025/3/23 | 17~18 |
+|           |       |
+
+# 单词
+
+| day | class |
+| --- | ----- |
+|     |       |
